core: add float style reset to avoid element alignment issues

--- a/src/components/core/public/style.scss
+++ b/src/components/core/public/style.scss
@@ -28,6 +28,7 @@
 
   * {
     box-sizing: inherit;
+    float: initial;
   }
 
   &.fullscreen {
